--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     ],
     "author": "",
     "license": "MIT",
+    "engines": {
+        "node": "24.12.0"
+    },
     "devDependencies": {
         "typescript": "^5.0.0",
         "webpack": "^5.88.0",
