--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,15 +16,16 @@
             "jinja": true
         },
         {
-            "name": "Webpack: watch",
+            "name": "Angular: ng serve",
             "type": "node",
             "request": "launch",
-            "runtimeExecutable": "npm",
+            "runtimeExecutable": "ng",
             "runtimeArgs": [
-                "run",
-                "watch"
+                "serve",
+                "--host",
+                "0.0.0.0"
             ],
-            "cwd": "${workspaceFolder}",
+            "cwd": "${workspaceFolder}/app",
             "console": "integratedTerminal",
             "presentation": {
                 "group": "webpack",
