--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -17,7 +17,8 @@
 	"customizations": {
 		"vscode": {
 			"extensions": [
-				"ms-python.debugpy"
+				"ms-python.debugpy",
+				"esbenp.prettier-vscode"
 			]
 		}
 	}
