--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -18,7 +18,8 @@
 		"vscode": {
 			"extensions": [
 				"ms-python.debugpy",
-				"esbenp.prettier-vscode"
+				"esbenp.prettier-vscode",
+				"ms-python.black-formatter"
 			]
 		}
 	}
