--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -13,7 +13,7 @@
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	// "forwardPorts": [],
 	// Uncomment the next line to run commands after the container is created.
-	"postCreateCommand": "/usr/local/bin/pip install -r requirements.txt && npm install app",
+	"postCreateCommand": "/usr/local/bin/pip install -r requirements.txt",
 	"customizations": {
 		"vscode": {
 			"extensions": [
